Update to java 25